feat: integrate signal input demo component into the form

--- a/projects/my-app/src/app/app.component.html
+++ b/projects/my-app/src/app/app.component.html
@@ -342,6 +342,7 @@
     <label>Example Form Field</label>
     <br/>
     <input type="text" formControlName="myField" class="example-input">
+    <app-signal-input-demo [inputSignal]="myFieldValue"></app-signal-input-demo>
   </form>
 
 </section>
