refactor: update horizontal navigation bar component to use reactive inputs

--- a/projects/my-lib/src/lib/horizontal-nav-bar.component.html
+++ b/projects/my-lib/src/lib/horizontal-nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav [ngClass]="['horizontal-nav-bar', position, customClass]" [ngStyle]="customStyle">
+<nav [ngClass]="['horizontal-nav-bar', position(), customClass()]" [ngStyle]="customStyle()">
   <div class="nav-logo">
     <ng-container *ngIf="logoTemplate; else defaultLogo">
       <ng-container *ngTemplateOutlet="logoTemplate"></ng-container>
@@ -8,7 +8,7 @@
     </ng-template>
   </div>
   <ul class="nav-items">
-    <li *ngFor="let route of routes">
+    <li *ngFor="let route of routes()">
       <a [routerLink]="route.path" routerLinkActive="active">{{ route.label }}</a>
     </li>
   </ul>
