refactor: update horizontal navigation bar and library component syntax to self-closing tags

--- a/projects/my-app/src/app/app.component.html
+++ b/projects/my-app/src/app/app.component.html
@@ -119,8 +119,8 @@
   }
 </style>
 
-<my-lib-horizontal-nav-bar position="left" [routes]="navRoutes"></my-lib-horizontal-nav-bar>
+<my-lib-horizontal-nav-bar position="left" [routes]="navRoutes" />
 
-<lib-my-lib></lib-my-lib>
+<lib-my-lib />
 
 <router-outlet />
