feat: implement vertical navigation bar component and update app to use it

--- a/projects/my-app/src/app/app.component.html
+++ b/projects/my-app/src/app/app.component.html
@@ -119,7 +119,7 @@
   }
 </style>
 
-<my-lib-horizontal-nav-bar position="left" [routes]="navRoutes" />
+<my-lib-vertical-nav-bar position="left" [routes]="navRoutes" />
 
 <lib-my-lib />
 
