refactor: update vertical navigation bar component to use reactive inputs and fix template syntax

--- a/projects/my-lib/src/lib/vertical-nav-bar.component.html
+++ b/projects/my-lib/src/lib/vertical-nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav [ngClass]="['vertical-nav-bar', position, customClass]" [ngStyle]="customStyle">
+<nav [ngClass]="['vertical-nav-bar', position(), customClass()]" [ngStyle]="customStyle()">
   <div class="nav-logo">
     <ng-container *ngIf="logoTemplate; else defaultLogo">
       <ng-container *ngTemplateOutlet="logoTemplate"></ng-container>
@@ -8,7 +8,7 @@
     </ng-template>
   </div>
   <ul class="nav-items">
-    <li *ngFor="let route of routes" routerLinkActive="active" [routerLink]="route.path">
+    <li *ngFor="let route of routes()" routerLinkActive="active" [routerLink]="route.path">
       {{ route.label }}
     </li>
   </ul>
