chore: wrap vertical nav bar and main content in app-layout for better structure

--- a/projects/my-app/src/app/app.component.html
+++ b/projects/my-app/src/app/app.component.html
@@ -119,8 +119,10 @@
   }
 </style>
 
-<my-lib-vertical-nav-bar position="left" [routes]="navRoutes" />
-
-<lib-my-lib />
-
-<router-outlet />
+<div class="app-layout">
+  <my-lib-vertical-nav-bar position="left" [routes]="navRoutes" />
+  <main>
+    <lib-my-lib />
+    <router-outlet />
+  </main>
+</div>
