--- a/projects/my-app/src/app/app.component.scss
+++ b/projects/my-app/src/app/app.component.scss
@@ -1,3 +1,13 @@
+.app-layout {
+	display: flex;
+	min-height: 100vh;
+}
+
+main {
+	flex: 1;
+	padding: 2rem;
+	overflow: auto;
+}
 
 .app-layout {
 	display: flex;
